cns/html/cns.css
/* Generic styles for Chicken Noodle Soap games. */

:root {
  --font-size: 2vh;
}

* {
  box-sizing: border-box;
}

html {
  /* This is now the basis of rem units. */
  font-size: var(--font-size);
}

body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;

  /* The body is black and only occupies the screen size. */
  background: black;
  overflow: hidden;
  position: relative;
}

#vorple {
  font-family: 'Roboto', sans-serif;

  /* The game area is white and scrolls. */
  background: white;
  overflow-y: scroll;
  scroll-behavior: smooth;
  height: 100vh;

  /* The game area fades in and out when we go to/from splash/credits. */
  transition: opacity 2s linear;

  /* It starts hidden. */
  opacity: 0;
}

body[data-mode="play"] #vorple {
  /* In play mode, we show the game area.  This transitions over 2s.
   * To enable that transition, we use opacity instead of display. */
  opacity: 1;
}

#splash, #credits, #menus {
  /* These default to hidden. */
  display: none;
}
body[data-mode="splash"] #splash {
  display: flex;
}
body[data-mode="credits"] #credits {
  display: block;  /* Not flex, or the centering is off */
}
body[data-mode="play"] #menus {
  /* These show when we enter play mode. */
  display: block;
}

body { /* and #vorple, which can't z-index */
  z-index: 0;
}
#menus {
  z-index: 1;
}
.popup-container {
  z-index: 2;
}
#splash, #credits {
  z-index: 3;
}

/* Vorple comes with a min-height that messes up our mobile sizing. */
#vorple {
  min-height: 0;
}

/* For mobile devices, add some top padding to make sure all content clears the
 * URL bar.  This is an issue on Brave. */
body[data-mobile="true"] #vorple {
  padding-top: 2em;
}

body[data-auto-complete="false"] #auto-complete {
  visibility: hidden;
}

/* More responsive font size and output width */
#vorple, #menus, label, input, select, button {
  font-size: 1rem;
}
#output {
  max-width: calc(min(50em, 78vw, 100vw - 6em));

  /* Add a little extra padding on bottom so the autocomplete isn't too cramped. */
  padding-bottom: 2em;
}

#splash, #credits {
  background: transparent;
  color: white;

  position: fixed;
  top: 0;

  margin: 0;
  padding: 2vh 2vw;
  height: 100vh;
  width: 100vw;

  overflow: hidden;
  user-select: none;
}

#splash, #creditsWrapper {
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#splash .fade-in-fade-out {
  opacity: 0;
  animation: 9s ease-in 1s fade-in-fade-out;
  position: absolute;
  text-align: center;
}

#splash #logo img {
  min-width: 100px;
  max-width: 90vw;
  max-height: 90vh;
}

#splash #cover {
  animation-delay: 10s;
}

img.cover {
  min-width: 100px;
  max-width: 90vw;
  max-height: 78vh;
}

#splash .author {
  font-size: 1.25rem;
  margin: 1vh 0;
}

#splash .inform {
  font-size: 0.75rem;
  margin: 1vh 0;
}

@keyframes fade-in-fade-out {
  0% {
    opacity: 0;
  }
  22% {
    opacity: 1;
  }
  66% {
    opacity: 1;
  }
  88% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

#creditsOuterSizer {
  /* height set at runtime to match #creditsWrapper,
   * used in calc percentage later */
}

#creditsWrapper {
  display: flex;
  animation: 90s linear 2s credits-scroll-and-fade;
  top: 100vh;
  position: relative;

  max-width: calc(min(180vh, 90vw));
  margin: auto;

  font-size: calc(min(4rem, 10vh));
}

#creditsWrapper div {
  margin: 1em 0;
  text-align: center;
}
#creditsWrapper div:last-child {
  margin-top: 50vh;
  margin-bottom: 0;
}

#desktopCredit, #desktopLicense {
  /* Re-enabled in the desktop bundle at runtime. */
  display: none;
}

@keyframes credits-scroll-and-fade {
  0% {
    top: 100vh;
    opacity: 1;
  }
  90% {
    /* -100% would fully offscreen, +50vh+1em centers the final line. */
    top: calc(-100% + 1em + 50vh);
    opacity: 1;
  }
  92% {
    /* -100% would fully offscreen, +50vh+1em centers the final line. */
    top: calc(-100% + 1em + 50vh);
    opacity: 1;
  }
  97% {
    top: calc(-100% + 1em + 50vh);
    opacity: 0;
  }
  100% {
    top: calc(-100% + 1em + 50vh);
    opacity: 0;
  }
}

#backgroundMusic {
  display: none;
}
#noMusic {
  display: none;
}

#lineinput-field, .prompt-input {
  /* Small increase in space by the prompt.  This is cheaper than overwriting
   * the prompt on every turn, which is the only other way I found to keep the
   * prompt from reverting to stock on a "restart" command. */
  padding-left: 0.5em;
}

/* Sometimes, when a command results in lots of text, it is difficult to find
 * your last command to start reading.  This makes it stand out some.
 * Also, match the auto-complete to this. */
.lineinput,
#lineinput,
#lineinput-prefix,
#lineinput-field,
#auto-complete select {
  font-family: 'Roboto', sans-serif;
  color: black;
  background: #eee;
}

ul.inventory {
  /* The UA default is to have top & bottom margins, but I like the list to
   * look more compact in inventory. */
  margin: 0;
}

/* The form containing the input field and auto-complete. */
#lineinput {
  position: relative;
}

/* The auto-complete elements, positioned in an overlay over the input field. */
#auto-complete {
  position: absolute;
  display: none;
}

.continue {
  background: khaki;
  padding: 0.5em;
  border: 2px ridge grey;
  display: block;
}

.room-heading {
  background: lavender;
  font-weight: bold;
}

/* Other room names, not in the heading that describes the current room. */
:not(.room-heading) > .room-name {
  background: lavenderblush;
  font-weight: bold;
}

.direction-name {
  background: lavenderblush;
  font-weight: bold;
}

.hint {
  background: linen;
  font-style: italic;
}
/* ... */

